--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "caffeinated/modules": "^4.2",
-        "irazasyed/jwt-auth-guard": "^1.0",
         "laravel/framework": "5.4.*",
+        "caffeinated/modules": "^4.2",
+        "irazasyed/jwt-auth-guard": "^1.0@dev",
+        "tymon/jwt-auth": "1.0.0-rc.1",
         "laravel/tinker": "~1.0",
-        "tymon/jwt-auth": "0.5.*",
         "yaro/apidocs": "^0.3.1"
     },
     "require-dev": {
